Included additional water access is moderated by anthropic pressures connection

--- a/Scripts/Final_Scripts/analyses/1_sem.Rmd
+++ b/Scripts/Final_Scripts/analyses/1_sem.Rmd
@@ -121,6 +121,7 @@ comp_trial2<- '
   INSTABILITY ~ BACKGROUND_CLIMATE + PULSE_STRESSORS + WATER_ACCESS + VEGETATION + ANTHROPIC_PRESSURES + FIRE
   VEGETATION  ~ PULSE_STRESSORS  + BACKGROUND_CLIMATE + ANTHROPIC_PRESSURES + FIRE
   FIRE ~ PULSE_STRESSORS + BACKGROUND_CLIMATE + ANTHROPIC_PRESSURES
+  WATER_ACCESS ~ ANTHROPIC_PRESSURES
   
   #Composite variables with equal weighting of indicators
   BACKGROUND_CLIMATE <~ re + mat
